[package]
name = "elasticsearch-alerter"
version = "1.0.0"
edition = "2021"
authors = ["Cenk Kilic <cenk@kilic.dev>"]
description = "A background task to fetch the alerts from an ElasticSearch index and forwards them to the administrators through SMTP."
license = "MIT"
readme = "README.md"
keywords = ["elasticsearch", "smtp", "bgtask", "background", "task"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
serde = { version = "1.0.133", features = ["derive"] }
structopt = "0.3.25"
anyhow = "1.0.52"
tokio-cron-scheduler = "0.3.1"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
duration-str = "0.3.8"
